# Soroban-Loyalty

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  FREIGHTER_IMPLEMENTATION_CHECKLIST.md  FREIGHTER_INTEGRATION_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  ISSUES_RESOLVED.md  PR_DESCRIPTIONS.md  README.md  docker-compose.yml  file.tmp
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: backend-ci.yml  blue-green-deploy.yml  cleanup-staging.yml  contracts-security.yml  deploy-staging.yml  e2e.yml  frontend-ci.yml  refresh-staging-data.yml  release.yml  rust-ci.yml  terraform.yml
backend/: .eslintrc.json  Dockerfile  README.md  jest.config.ts  jest.integration.config.ts  package-lock.json  package.json
backend/scripts/: generate-openapi.ts
contracts/: README.md
contracts/rewards/: Cargo.toml
contracts/rewards/src/: lib.rs
database/: EXPLAIN_ANALYZE.md  schema.sql
docs/: api-reference.md  blue-green-runbook.md  cdn-setup.md  database.md  freighter-integration.md  glossary.md  incident-response-playbook.md  indexer.md  merchant-guide.md  post-mortem-template.md  secrets-management-runbook.md  security-model.md  storage-migration.md  user-guide.md
e2e/: package.json  playwright.config.ts
frontend/: Dockerfile  README.md  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js
monitoring/: alerts.yml  prometheus.yml
postman/: README.md  SorobanLoyalty.postman_collection.json
scripts/: anonymize-db.sh  blue-green-switch.sh  check-contract-audit-readiness.sh  deploy-contracts.sh  renew-certs.sh
(+178 files in other folders)
